--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "umd:main": "dist/umd/index.js",
   "types": "dist/types/index.d.js",
   "scripts": {
+    "dev": "vite",
+    "buildex": "tsc && vite build",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
     "postversion": "git push --follow-tags",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:umd && npm run build:types",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:types",
     "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
     "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
     "build:umd": "node tools/cleanup umd && webpack --config config/webpack.config.js",
@@ -51,7 +53,9 @@
   "bugs": {
     "url": "https://github.com/cossackgh/client-svgeditor/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "tsc": "^2.0.4"
+  },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
@@ -67,8 +71,9 @@
     "prettier": "^2.4.0",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
+    "typescript": "^4.7.4",
     "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "vite": "^3.0.7"
   }
 }
