--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "types": "dist/types/index.d.js",
   "scripts": {
     "dev": "vite",
-    "buildex": "tsc && vite build",
+    "buildts": "npx tsc",
+    "buildex": "vite build",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
@@ -71,9 +72,9 @@
     "prettier": "^2.4.0",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.7",
     "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0",
-    "vite": "^3.0.7"
+    "webpack-cli": "^4.8.0"
   }
 }
