--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,5 +67,5 @@
     // "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*", "example/clientsvg.ts", "example/main.ts"]
+  "include": ["src/**/*"]
 }
