--- a/config/tsconfig.umd.json
+++ b/config/tsconfig.umd.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig",
   "compilerOptions": {
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "declaration": false /* Generates corresponding '.d.ts' file. */
+    "declaration": true /* Generates corresponding '.d.ts' file. */,
+    "declarationMap":true,
+    "removeComments": true, /* Do not emit comments to output. */
   }
 }
