--- a/config/tsconfig.umd.json
+++ b/config/tsconfig.umd.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig",
   "compilerOptions": {
-    "module": "es2015" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+    "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "removeComments": true, /* Do not emit comments to output. */
