--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svgeditor-simple-client",
-  "version": "0.0.81",
+  "version": "0.0.88",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -15,10 +15,12 @@
     "postpublish": "pinst --enable",
     "postversion": "git push --follow-tags",
     "build": "npm run build:cjs && npm run build:esm && npm run build:types",
-    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
+    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json && npm run copy-files-cjs",
+    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json && npm run copy-files-esm",
     "build:umd": "node tools/cleanup umd && webpack --config config/webpack.config.js",
     "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
+    "copy-files-esm": "copyfiles --flat src/**/*.css dist/esm/",
+    "copy-files-cjs": "copyfiles --flat src/**/*.css dist/cjs/",
     "clean": "node tools/cleanup",
     "package": "npm run build && npm pack",
     "test": "jest --no-cache --runInBand",
@@ -64,13 +66,18 @@
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "copyfiles": "^2.4.1",
+    "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
     "jest": "^27.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "pinst": "^2.1.6",
     "prettier": "^2.4.0",
+    "rimraf": "^3.0.2",
+    "style-loader": "^3.3.1",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
